clang/test/BSC/Negative/Ownership/Owned/owned_global_err/owned_global_err.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

_Owned int a = 10; //expected-error {{type of 'int' cannot be qualified by '_Owned'}} expected-error {{type of global variable cannot be qualified by '_Owned'}}

typedef struct A {
    _Owned int num; // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
}SA;

SA sa1 = {.num = 10};   //expected-error {{type of global variable cannot be qualified by '_Owned'(even indirectly), 'SA' (aka 'struct A') contains '_Owned' type}}

struct A sa2 = {.num = 20};   //expected-error {{type of global variable cannot be qualified by '_Owned'(even indirectly), 'struct A' contains '_Owned' type}}

typedef struct B {
    SA* sa;
}SB;

SB* sb1;


